--- a/index.html
+++ b/index.html
@@ -10,6 +10,57 @@
 
 <body>
 
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="header__top">
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">О нас</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Стоимость</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Доп.услуги</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Гарантии</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="#">Новости</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a class="phone" href="tel:080000000000">0 800 000 000 00</a>
+                    <button class="login"><img class="login__img" src="#" alt="login img"></button>
+                </div>
+
+                <div class="header__content">
+                    <h1 class="header__title">космический <span>туризм</span></h1>
+                    <div class="header__text">
+                        <p>Будущее уже наступило!</p>
+                        <p>Осуществи мечту детства!</p>
+                    </div>
+                    <button class="header__btn">Хочу быть космонавтом!</button>
+                </div>
+
+                <div class="header__description">
+                    <div class="header__description-text">В 2021 году наступила новая эра в освоении космоса - эра
+                        космического туризма. Частные компании получили доступ к космическому пространству.</div>
+                    <div class="header__description-text">
+                        Между ними обострилась конкуренция, а цена билета на полеты в космическое пространство снизилась
+                        в сто раз.</div>
+                </div>
+            </div>
+        </div>
+
+
+    </header>
+
+
+
 </body>
 
 </html>
